--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,152 +8,146 @@ import { dateRange } from "@lib/utils";
 import { SITE, HOME, SOCIALS } from "@consts";
 
 const blog = (await getCollection("blog"))
-  .filter(post => !post.data.draft)
-  .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf())
-  .slice(0,SITE.NUM_POSTS_ON_HOMEPAGE);
-
-const projects = (await getCollection("projects"))
-  .filter(project => !project.data.draft)
-  .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf())
-  .slice(0,SITE.NUM_PROJECTS_ON_HOMEPAGE);
+    .filter((post) => !post.data.draft)
+    .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf())
+    .slice(0, SITE.NUM_POSTS_ON_HOMEPAGE);
 
 const allwork = (await getCollection("work"))
-  .sort((a, b) => new Date(b.data.dateStart).valueOf() - new Date(a.data.dateStart).valueOf())
-  .slice(0,SITE.NUM_WORKS_ON_HOMEPAGE);
+    .sort(
+        (a, b) =>
+            new Date(b.data.dateStart).valueOf() -
+            new Date(a.data.dateStart).valueOf(),
+    )
+    .slice(0, SITE.NUM_WORKS_ON_HOMEPAGE);
 
 const work = await Promise.all(
-  allwork.map(async (item) => {
-    const { Content } = await item.render();
-    return { ...item, Content };
-  })
+    allwork.map(async (item) => {
+        const { Content } = await item.render();
+        return { ...item, Content };
+    }),
 );
-
 ---
 
 <PageLayout title={HOME.TITLE} description={HOME.DESCRIPTION}>
-  <Container>
-    <h4 class="animate font-semibold text-black dark:text-white">
-      Hi, I'm Nano <span class="text-xl">👋🏻</span> 
-    </h4>
-    <div class="space-y-16">
-      <section>
-        <article class="space-y-4">
-          <p class="animate">
-            I am a minimal, seo friendly, accessible portfolio and blog for developers. 
-            I am an even more lightweight version of my popular theme
-            <Link href="https://github.com/markhorn-dev/astro-sphere" aria-label="Astro Sphere on Github" external>
-              Astro Sphere
-            </Link>.
-            I have a lighthouse scores of 100 across the board for performance, 
-            accesibility, best practices and SEO.
-          </p>
-          <p class="animate">
-            I come packed with full type safety, a sitemap, an rss feed, markdown 
-            and mdx support (use components in your markdown) through astro integrations.
-            I am styled with tailwind and come preconfigured with light, dark and 
-            system/os theme preferences out of the box.
-          </p>
-          <p class="animate">
-            Visit
-            <Link href="https://github.com/markhorn-dev/astro-nano" aria-label="Astro Nano on Github" external>
-              Astro Nano on Github
-            </Link>
-            to fork the repository, read the docs or one-click deploy on Vercel or Netlify. 
-          </p>
-        </article>
-      </section>
+    <Container>
+        <h4 class="animate font-semibold text-black dark:text-white">
+            Hello there! I'm Krzysztof <span class="text-xl">👋🏻</span>
+        </h4>
+        <div class="space-y-16">
+            <section>
+                <article class="space-y-4">
+                    <p class="animate">
+                        Technical PM with extensive experience in Rapid
+                        Prototyping and Product Delivery, I swiftly bring ideas
+                        to market, ensuring alignment with industry needs. Over
+                        a decade in B2B and B2C sectors like banking,
+                        healthcare, and blockchain, I've mastered efficient
+                        product delivery.
+                    </p>
 
-      <section class="animate space-y-6">
-        <div class="flex flex-wrap gap-y-2 items-center justify-between">
-          <h5 class="font-semibold text-black dark:text-white">
-            Latest posts
-          </h5>
-          <Link href="/blog">
-            See all posts
-          </Link>
+                    <p class="animate">
+                        For the past four years, I've delved into blockchain and
+                        Web3, exploring decentralized systems, Zero-Knowledge,
+                        Self-Sovereign Identity, and data privacy. I bridge the
+                        gap between technical and non-technical stakeholders,
+                        fostering effective collaboration and understanding.
+                    </p>
+
+                    <p class="animate">
+                        My technical expertise and industry diversity enable me
+                        to infuse projects with a fresh perspective, promoting
+                        innovation and ensuring successful project execution
+                        from inception.
+                    </p>
+                </article>
+            </section>
         </div>
-        <ul class="flex flex-col gap-4">
-          {blog.map(post => (
-            <li>
-              <ArrowCard entry={post} />
-            </li>
-          ))}
-        </ul>
-      </section>
 
-      <section class="animate space-y-6">
-        <div class="flex flex-wrap gap-y-2 items-center justify-between">
-          <h5 class="font-semibold text-black dark:text-white">
-            Work Experience
-          </h5>
-          <Link href="/work">
-            See all work
-          </Link>
-        </div>
-        <ul class="flex flex-col space-y-4">
-          {work.map(entry => (
-            <li>
-              <div class="text-sm opacity-75">
-                {dateRange(entry.data.dateStart, entry.data.dateEnd)}
-              </div>
-              <div class="font-semibold text-black dark:text-white">
-                {entry.data.company}
-              </div>
-              <div class="text-sm opacity-75">
-                {entry.data.role}
-              </div>
-              <article>
-                <entry.Content />
-              </article>
-            </li>
-          ))}
-        </ul>
-      </section>
+        <section class="animate space-y-6">
+            <div class="flex flex-wrap gap-y-2 items-center justify-between">
+                <h5 class="font-semibold text-black dark:text-white">
+                    Latest posts
+                </h5>
+                <Link href="/blog"> See all posts </Link>
+            </div>
+            <ul class="flex flex-col gap-1.5">
+                {
+                    blog.map((post) => (
+                        <li>
+                            <ArrowCard entry={post} />
+                        </li>
+                    ))
+                }
+            </ul>
+        </section>
 
-      <section class="animate space-y-6">
-        <div class="flex flex-wrap gap-y-2 items-center justify-between">
-          <h5 class="font-semibold text-black dark:text-white">
-            Recent projects
-          </h5>
-          <Link href="/projects">
-            See all projects
-          </Link>
-        </div>
-        <ul class="flex flex-col gap-4">
-          {projects.map(project => (
-            <li>
-              <ArrowCard entry={project} />
-            </li>
-          ))}
-        </ul>
-      </section>
+        <section class="animate space-y-6">
+            <div class="flex flex-wrap gap-y-2 items-center justify-between">
+                <h5 class="font-semibold text-black dark:text-white">
+                    Work Experience
+                </h5>
+                <Link href="/work"> See all work </Link>
+            </div>
+            <ul class="flex flex-col space-y-4">
+                {
+                    work.map((entry) => (
+                        <li>
+                            <div class="text-sm opacity-75">
+                                {dateRange(
+                                    entry.data.dateStart,
+                                    entry.data.dateEnd,
+                                )}
+                            </div>
+                            <div class="font-semibold text-black dark:text-white">
+                                {entry.data.company}
+                            </div>
+                            <div class="text-sm opacity-75">
+                                {entry.data.role}
+                            </div>
+                            <article>
+                                <entry.Content />
+                            </article>
+                        </li>
+                    ))
+                }
+            </ul>
 
-      <section class="animate space-y-4">
-        <h5 class="font-semibold text-black dark:text-white">
-          Let's Connect
-        </h5>
-        <article>
-          <p>
-            If you want to get in touch with me about something or just to say hi,
-            reach out on social media or send me an email.
-          </p>
-        </article>
-        <ul class="flex flex-wrap gap-2">
-          {SOCIALS.map(SOCIAL => (
-            <li class="flex gap-x-2 text-nowrap">
-              <Link href={SOCIAL.HREF} external aria-label={`${SITE.NAME} on ${SOCIAL.NAME}`}>
-                {SOCIAL.NAME}
-              </Link>
-              {"/"}
-            </li>
-          ))}
-          <li class="line-clamp-1">
-            <Link href={`mailto:${SITE.EMAIL}`} aria-label={`Email ${SITE.NAME}`}>
-              {SITE.EMAIL}
-            </Link>
-          </li>
-        </ul>
-      </section>
-    </div>
-  </Container>
+            <section class="animate space-y-4">
+                <h5 class="font-semibold text-black dark:text-white">
+                    Let's Connect
+                </h5>
+                <article>
+                    <p>
+                        If you want to get in touch with me about something or
+                        just to say hi, reach out on social media or send me an
+                        email.
+                    </p>
+                </article>
+                <ul class="flex flex-wrap gap-2">
+                    {
+                        SOCIALS.map((SOCIAL) => (
+                            <li class="flex gap-x-2 text-nowrap">
+                                <Link
+                                    href={SOCIAL.HREF}
+                                    external
+                                    aria-label={`${SITE.NAME} on ${SOCIAL.NAME}`}
+                                >
+                                    {SOCIAL.NAME}
+                                </Link>
+                                {"/"}
+                            </li>
+                        ))
+                    }
+                    <li class="line-clamp-1">
+                        <Link
+                            href={`mailto:${SITE.EMAIL}`}
+                            aria-label={`Email ${SITE.NAME}`}
+                        >
+                            {SITE.EMAIL}
+                        </Link>
+                    </li>
+                </ul>
+            </section>
+        </section>
+    </Container>
 </PageLayout>
