--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,27 +37,22 @@ const work = await Promise.all(
             <section>
                 <article class="space-y-4">
                     <p class="animate">
-                        Technical PM with extensive experience in Rapid
-                        Prototyping and Product Delivery, I swiftly bring ideas
-                        to market, ensuring alignment with industry needs. Over
-                        a decade in B2B and B2C sectors like banking,
-                        healthcare, and blockchain, I've mastered efficient
-                        product delivery.
+                        I am a Technical PM with extensive experience in Rapid
+                        Prototyping and Product Delivery. I am adept at swiftly
+                        bringing ideas to market, ensuring alignment with
+                        industry needs. I've spent over a decade in the B2B and
+                        B2C sectors, including e-commerce, esports, banking and
+                        more. I've learned a lot about efficient product
+                        delivery along the way!
                     </p>
 
                     <p class="animate">
-                        For the past four years, I've delved into blockchain and
-                        Web3, exploring decentralized systems, Zero-Knowledge,
-                        Self-Sovereign Identity, and data privacy. I bridge the
-                        gap between technical and non-technical stakeholders,
-                        fostering effective collaboration and understanding.
-                    </p>
-
-                    <p class="animate">
-                        My technical expertise and industry diversity enable me
-                        to infuse projects with a fresh perspective, promoting
-                        innovation and ensuring successful project execution
-                        from inception.
+                        Blockchain and Web3 have been my focus for the past four
+                        years. I've explored decentralised systems,
+                        zero-knowledge, self-sovereign identity and data
+                        privacy. I bridge the gap between technical and
+                        non-technical stakeholders, fostering effective
+                        collaboration and understanding.
                     </p>
                 </article>
             </section>
