--- a/src/components/Container.astro
+++ b/src/components/Container.astro
@@ -1,7 +1,5 @@
 ---
 
----
-
-<div class="mx-auto max-w-screen-sm px-5">
-  <slot />
+<div class="mx-auto max-w-screen-sm px-5 flex flex-col gap-16">
+    <slot />
 </div>
