--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,22 +31,23 @@ const work = await Promise.all(
 <PageLayout title={HOME.TITLE} description={HOME.DESCRIPTION}>
     <Container>
         <h4 class="animate font-semibold text-black dark:text-white">
-            Hello there! I'm Krzysztof <span class="text-xl">👋🏻</span>
+            Hi, I'm Krzysztof. <span class="text-xl">👋🏻</span>
         </h4>
         <div class="space-y-16">
             <section>
                 <article class="space-y-4">
                     <p class="animate">
                         I am a Technical PM with extensive experience in Rapid
-                        Prototyping and Product Delivery. I am adept at swiftly
-                        bringing ideas to market, ensuring alignment with
-                        industry needs. I've spent over a decade in the B2B and
-                        B2C sectors, including e-commerce, esports, banking and
-                        more. I've learned a lot about efficient product
-                        delivery along the way!
+                        Prototyping and Product Delivery. I know exactly how to
+                        launch products that meet industry standards. I've spent
+                        over a decade in the B2B2C sectors, including
+                        e-commerce, esports, banking, AI, blockchain and more. I
+                        am an expert in efficient product delivery and team
+                        leadership!
                     </p>
 
                     <p class="animate">
+                        For the past four years, I've divided deep in to the
                         Blockchain and Web3 have been my focus for the past four
                         years. I've explored decentralised systems,
                         zero-knowledge, self-sovereign identity and data
