--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,25 +5,21 @@ import { SITE } from "@consts";
 ---
 
 <header>
-  <Container>
-    <div class="flex flex-wrap gap-y-2 justify-between">
-      <Link href="/" underline={false}>
-        <div class="font-semibold">
-          {SITE.NAME}
+    <Container>
+        <div class="flex flex-wrap gap-y-2 justify-between">
+            <Link href="/" underline={false}>
+                <div class="font-semibold">
+                    {SITE.NAME}
+                </div>
+            </Link>
+            <nav class="flex gap-1">
+                <Link href="/blog"> blog </Link>
+                <span>
+                    {`/`}
+                </span>
+                <Link href="/work"> work </Link>
+                <span> </span>
+            </nav>
         </div>
-      </Link>
-      <nav class="flex gap-1">
-        <Link href="/blog">
-          blog
-        </Link>
-        <span>
-          {`:`}
-        </span>
-        <Link href="/work">
-          work
-        </Link>
-        <span>
-      </nav>
-    </div>
-  </Container>
+    </Container>
 </header>
