--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,23 +37,17 @@ const work = await Promise.all(
             <section>
                 <article class="space-y-12">
                     <p class="animate">
-                        I am a Technical PM with extensive experience in Rapid
-                        Prototyping and Product Delivery. I know exactly how to
-                        launch products that meet industry standards. I've spent
-                        over a decade in the B2B2C sectors, including
-                        e-commerce, esports, banking, AI, blockchain and more. I
-                        am an expert in efficient product delivery and team
-                        leadership!
-                    </p>
-
-                    <p class="animate">
-                        For the past four years, I've divided deep in to the
-                        Blockchain and Web3 have been my focus for the past four
-                        years. I've explored decentralised systems,
-                        zero-knowledge, self-sovereign identity and data
-                        privacy. I bridge the gap between technical and
-                        non-technical stakeholders, fostering effective
-                        collaboration and understanding.
+                        I'm a Regen and advocate for data privacy and open
+                        source software. I can launch products that meet user
+                        needs. I have spent over a decade in the B2B2C sectors,
+                        including e-commerce, esports, banking, AI, blockchain
+                        and more. I am an expert in efficient product delivery
+                        and team leadership. I've specialised in blockchain and
+                        Web3 technologies, with a focus on decentralised
+                        systems, zero-knowledge proofs, self-sovereign identity,
+                        and data privacy. I excel at bridging the gap between
+                        technical and non-technical stakeholders, promoting
+                        effective collaboration and understanding.
                     </p>
                 </article>
             </section>
