--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,13 +19,13 @@ body {
 body {
     @apply font-sans antialiased;
     @apply flex flex-col;
-    @apply bg-blue-100 dark:bg-blue-950;
+    @apply bg-neutral-100 dark:bg-neutral-950;
     @apply text-black/50 dark:text-white/75;
 }
 
 header {
     @apply fixed top-0 left-0 right-0 z-50 py-5;
-    @apply bg-blue-100 dark:bg-blue-950;
+    @apply bg-neutral-100 dark:bg-neutral-950;
 }
 
 main {
