--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,22 +37,35 @@ const work = await Promise.all(
             <section>
                 <article class="space-y-12">
                     <p class="animate">
-                        I'm a Regen and advocate for data privacy and open
-                        source software. I can launch products that meet user
-                        needs. I have spent over a decade in the B2B2C sectors,
-                        including e-commerce, esports, banking, AI, blockchain
-                        and more. I am an expert in efficient product delivery
-                        and team leadership. I've specialised in blockchain and
-                        Web3 technologies, with a focus on decentralised
-                        systems, zero-knowledge proofs, self-sovereign identity,
-                        and data privacy. I excel at bridging the gap between
-                        technical and non-technical stakeholders, promoting
-                        effective collaboration and understanding.
+                        I'm a Regen and an advocate for privacy and open source
+                        software. With over a decade of experience in B2B2C
+                        sectors such as e-commerce, esports, banking, AI,
+                        blockchain and more, I know exactly how to launch
+                        products that meet user needs and deliver efficiently.
+                        My expertise is in blockchain and Web3 technologies,
+                        specialising in decentralised systems, zero-knowledge
+                        proofs, self-sovereign identity and data privacy.
+                    </p>
+                    <p class="animate">
+                        I have a strong track record of leading teams and
+                        delivering products efficiently. My ability to connect
+                        technical and non-technical stakeholders fosters smooth
+                        collaboration and mutual understanding. I am also deeply
+                        interested in human-computer interaction and how
+                        technology can seamlessly integrate into our daily
+                        lives.
+                    </p>
+                    <p class="animate">
+                        I am technology agnostic person, with a proven track
+                        record in building SaaS products using the best tech for
+                        the job. I don't like to loose tempo so I feel strong in
+                        rapid prototyping and extreme programming which allow me
+                        to quickly iterate and refine products to meet end user
+                        expectations.
                     </p>
                 </article>
             </section>
         </div>
-
         <section class="animate space-y-6">
             <div class="flex flex-wrap gap-y-2 items-center justify-between">
                 <h5 class="font-semibold text-black dark:text-white">
