--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,31 +37,33 @@ const work = await Promise.all(
             <section>
                 <article class="space-y-12">
                     <p class="animate">
-                        I'm a Regen and an advocate for privacy and open source
-                        software. With over a decade of experience in B2B2C
-                        sectors such as e-commerce, esports, banking, AI,
-                        blockchain and more, I know exactly how to launch
-                        products that meet user needs and deliver efficiently.
-                        My expertise is in blockchain and Web3 technologies,
-                        specialising in decentralised systems, zero-knowledge
-                        proofs, self-sovereign identity and data privacy.
+                        I'm a Regen and staunch advocate for privacy and
+                        open-source software, I bring over a decade of
+                        experience in B2B2C sectors including e-commerce,
+                        esports, banking, AI, and blockchain. I specialize in
+                        launching products that precisely meet user needs and
+                        deliver efficiently. My expertise lies in blockchain and
+                        Web3 technologies, with a focus on decentralized
+                        systems, zero-knowledge proofs, self-sovereign identity,
+                        and data privacy.
                     </p>
                     <p class="animate">
-                        I have a strong track record of leading teams and
-                        delivering products efficiently. My ability to connect
-                        technical and non-technical stakeholders fosters smooth
-                        collaboration and mutual understanding. I am also deeply
-                        interested in human-computer interaction and how
-                        technology can seamlessly integrate into our daily
-                        lives.
+                        I have a proven track record of delivering high-quality
+                        products and leading effective teams. My ability to
+                        bridge the gap between technical and non-technical
+                        stakeholders fosters smooth collaboration and mutual
+                        understanding. Additionally, I have a keen interest in
+                        human-computer interaction and strive to seamlessly
+                        integrate technology into our daily routines.
                     </p>
                     <p class="animate">
-                        I am technology agnostic person, with a proven track
-                        record in building SaaS products using the best tech for
-                        the job. I don't like to loose tempo so I feel strong in
-                        rapid prototyping and extreme programming which allow me
-                        to quickly iterate and refine products to meet end user
-                        expectations.
+                        As a technology-agnostic professional, I have a
+                        demonstrated history of building diverse software
+                        products by leveraging the most suitable technologies
+                        for each task. My expertise in rapid prototyping and
+                        extreme programming allows me to maintain momentum and
+                        iterate swiftly, ensuring products are refined to exceed
+                        end-user expectations.
                     </p>
                 </article>
             </section>
