--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -92,8 +92,8 @@ const work = await Promise.all(
             </h5>
             <article>
                 <p>
-                    If you want to get in touch with me about something or just
-                    to say hi, reach out on social media or send me an email.
+                    If you’d like to get in touch or simply say hello, feel free
+                    to connect with me on social media or send me an email.
                 </p>
             </article>
             <ul class="flex flex-wrap gap-2">
