--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,11 +59,11 @@ const work = await Promise.all(
                     <p class="animate">
                         As a technology-agnostic professional, I have a
                         demonstrated history of building diverse software
-                        products by leveraging the most suitable technologies
-                        for each task. My expertise in rapid prototyping and
-                        extreme programming allows me to maintain momentum and
-                        iterate swiftly, ensuring products are refined to exceed
-                        end-user expectations.
+                        products by leveraging the most suitable technologies to
+                        achieve specific project goals. My expertise in rapid
+                        prototyping and extreme programming allows me to
+                        maintain momentum and iterate swiftly, ensuring products
+                        are refined to exceed end-user expectations.
                     </p>
                 </article>
             </section>
