--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,39 +31,37 @@ const work = await Promise.all(
 <PageLayout title={HOME.TITLE} description={HOME.DESCRIPTION}>
     <Container>
         <h4 class="animate font-semibold text-black dark:text-white">
-            Hi, I'm Krzysztof. <span class="text-xl">👋🏻</span>
+            About me: <span class="text-xl"></span>
         </h4>
         <div>
             <section>
                 <article class="space-y-12">
                     <p class="animate">
-                        I'm a Regen and staunch advocate for privacy and
-                        open-source software, I bring over a decade of
-                        experience in B2B2C sectors including e-commerce,
-                        esports, banking, AI, and blockchain. I specialize in
-                        launching products that precisely meet user needs and
-                        deliver efficiently. My expertise lies in blockchain and
-                        Web3 technologies, with a focus on decentralized
-                        systems, zero-knowledge proofs, self-sovereign identity,
-                        and data privacy.
+                        Hi, I’m Krzysztof Wujs, a privacy and open-source
+                        software advocate with over a decade of experience in
+                        dynamic B2B2C sectors like e-commerce, esports, banking,
+                        AI, and blockchain. I focus on launching advanced
+                        products that meet user needs and deliver efficiently.
+                        As a Regen, I’m deeply invested in blockchain technology
+                        and decentralized systems, driving the future of
+                        internet.
                     </p>
                     <p class="animate">
-                        I have a proven track record of delivering high-quality
-                        products and leading effective teams. My ability to
-                        bridge the gap between technical and non-technical
-                        stakeholders fosters smooth collaboration and mutual
-                        understanding. Additionally, I have a keen interest in
-                        human-computer interaction and strive to seamlessly
-                        integrate technology into our daily routines.
+                        My expertise lies in blockchain and web3 technologies,
+                        particularly in decentralized systems, zero-knowledge
+                        proofs, self-sovereign identity, and data privacy. I
+                        have a solid history of delivering top-notch products
+                        and leading successful teams, effectively bridging the
+                        gap between technical and non-technical stakeholders to
+                        ensure smooth collaboration.
                     </p>
                     <p class="animate">
-                        As a technology-agnostic professional, I have a
-                        demonstrated history of building diverse software
-                        products by leveraging the most suitable technologies to
-                        achieve specific project goals. My expertise in rapid
-                        prototyping and extreme programming allows me to
-                        maintain momentum and iterate swiftly, ensuring products
-                        are refined to exceed end-user expectations.
+                        I’m passionate about human-computer interaction and
+                        committed to seamlessly integrating technology into our
+                        daily lives. As a technology-agnostic professional, I
+                        choose the best tools for each project. I focus on rapid
+                        prototyping and agile development to ensure products not
+                        just meet but exceed user expectations.
                     </p>
                 </article>
             </section>
