--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,20 +31,20 @@ const work = await Promise.all(
 <PageLayout title={HOME.TITLE} description={HOME.DESCRIPTION}>
     <Container>
         <h4 class="animate font-semibold text-black dark:text-white">
-            About me: <span class="text-xl"></span>
+            Welcome! I'm glad you're here. <span class="text-xl"></span>
         </h4>
         <div>
             <section>
                 <article class="space-y-12">
                     <p class="animate">
-                        Hi, I’m Krzysztof Wujs, a privacy and open-source
+                        My name is Krzysztof Wujs, a privacy and open-source
                         software advocate with over a decade of experience in
-                        dynamic B2B2C sectors like e-commerce, esports, banking,
-                        AI, and blockchain. I focus on launching advanced
-                        products that meet user needs and deliver efficiently.
-                        As a Regen, I’m deeply invested in blockchain technology
-                        and decentralized systems, driving the future of
-                        internet.
+                        B2B2C sectors like e-commerce, esports, banking, AI,
+                        blockchain, and data privacy. I focus on launching
+                        advanced products that meet user needs efficiently. As a
+                        Regen, I’m deeply invested in blockchain and
+                        decentralized systems, striving to create a better, more
+                        inclusive internet for the future
                     </p>
                     <p class="animate">
                         My expertise lies in blockchain and web3 technologies,
