--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,7 @@ import BackToTop from "@components/BackToTop.astro";
         </div>
         <div class="flex justify-between items-center">
             <div>
-                &copy; K.Wujs
+                &copy; K.Wujs 2024
                 {`|`}
                 based on <a
                     href="https://github.com/markhorn-dev/astro-nano"
